@@ -1,3 +1,6 @@
+2017-4-26:
+	-Added new skills: Watersweep, Ragnell, Heavy Blade, Spur Def Res, Guard
+
 2017-4-20:
 	-Added Eckesachs.
 	-Blazed it.
